--- a/website.css
+++ b/website.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
   box-sizing: border-box;
 }
 
@@ -40,27 +41,18 @@ body {
   border: 0;
 }
 
-
-.main-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: #f5f5f5;
-  padding: 20px;
-}
-
-
 .text-block {
-  max-width: 50%;
-  margin-right: 20px;
+  position: relative;
+  top: 180px;
+  left: 140px;
 }
 
 .text-block h1 {
   font-size: 3rem;
   font-weight: bold;
-  color: #333;
   margin-bottom: 20px;
+  color: #fff;
+  font-family: Inter, ;
 }
 
 .text-block p {
@@ -69,63 +61,58 @@ body {
   margin-bottom: 40px;
 }
 
-.text-block button {
+.button-image {
   background-color: #28a745;
   color: white;
   padding: 15px 30px;
   border: none;
   border-radius: 5px;
-  font-size: 1rem;
+  font-size: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  position: relative;
+  top: 199px;
+  left: 140px;
 }
 
 .text-block button:hover {
   background-color: #218838;
 }
 
-
-.image-block {
-  max-width: 50%;
-}
-
-.image-block img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-} 
-
-
-@media screen and (max-width: 768px) {
-  .main-section {
-      flex-direction: column;
-  }
-
-  .text-block, .image-block {
-      max-width: 100%;
-      margin-right: 0;
-  }
-
-  .text-block {
-      text-align: center;
-      margin-bottom: 20px;
-  }
-}
-
 .arrow-mark {
-  position: bottom-left corner;
-  bottom-left
+ position: absolute;
+ top: 50px;  
+ left :-150px
 }
+
+.background-image {
+  position: absolute;
+  background-image: url(./teaimage);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 80vh;
+  bottom: 0px;
+}
+.pos{
+  position: relative;
+}
+.main-section{
+  position : relative;
+
+}
+
 
 .brand-info {  
   font-family: Arial, sans-serif;  
   max-width: 800px;  
-  margin: 0 auto;  
+  margin: 0 auto;
+  border: 0;
 }  
   
 h1 {  
   font-size: 2.5em;  
-  margin-bottom: 0;  
+  margin-bottom: 0;
+  font-family: Inter;
 }  
   
 h2 {  
